shared/src/test/data/yeast/invalid-json/null-value.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'key'
Indicator           8,  2,  6 '\"'
EndScalar           9,  2,  7 ''
Indicator           9,  2,  7 ':'
LineBreak          10,  2,  8 '\n'
EndMapping         11,  3,  0 '}'
